@@ -1087,28 +1087,25 @@ void DumpMem_DW(const uint32 *ptr, int count)
 }
 
 
-wxString GetConfigDir()
+wxString GetConfigDir(const wxString &configFileBase)
 {
 	// Cache the path.
 	static wxString configPath;
 
 	if (configPath.IsEmpty()) {
-#ifndef EC_REMOTE
 		// "Portable aMule" - Use aMule from an external USB drive
-		// Check for ./config/amule.conf and use this configuration if found
+		// Check for ./config/amule.conf (or whatever gets passed as configFile)
+		// and use this configuration if found
 		const wxString configDir = JoinPaths(wxFileName::GetCwd(), wxT("config"));
-		const wxString configFile = JoinPaths(configDir, wxT("amule.conf"));
+		const wxString configFile = JoinPaths(configDir, configFileBase);
 
 		if (CPath::DirExists(configDir) && CPath::FileExists(configFile)) {
-			AddLogLineM(true, CFormat(wxT("Using configDir: %s")) % configDir);
+			AddLogLineN(CFormat(wxT("Using configDir: %s")) % configDir);
 
 			configPath = configDir;
 		} else {
 			configPath = wxStandardPaths::Get().GetUserDataDir();
 		}
-#else
-		configPath = wxStandardPaths::Get().GetUserDataDir();
-#endif
 
 		configPath += wxFileName::GetPathSeparator();
 	}
